kouhai/tests/cases/error/ptr_arithmetic_not_allowed.kou
fn main():
    let p: Ptr = 0 as Ptr
    let q: Ptr = p + p
